[package]
name = "redo"
version = "0.41.0"
authors = ["evenorog <evenorog@gmail.com>"]
description = "High-level undo-redo functionality."
documentation = "https://docs.rs/redo"
repository = "https://github.com/evenorog/redo"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["undo", "redo"]
categories = ["data-structures", "rust-patterns"]
exclude = ["/.travis.yml"]
edition = "2018"

[dependencies]
undo = { version = "0.42" }
serde_crate = { package = "serde", version = "1", optional = true, default-features = false, features = ["derive"] }

[features]
default = []
chrono = ["undo/chrono"]
colored = ["undo/colored"]
serde = ["serde_crate", "undo/serde"]

[badges]
travis-ci = { repository = "evenorog/redo" }
maintenance = { status = "actively-developed" }
